2012-09-17  Anders Carlsson  <andersca@apple.com>

        Don't load a blocked plug-in if a non-blocked version of the same plug-in exists
        https://bugs.webkit.org/show_bug.cgi?id=96933
        <rdar://problem/12206720>

        Reviewed by Andreas Kling.

        If a plug-in with the same bundle identifier already exists and it's blocked, remove it and replace it
        with the other version.

        * UIProcess/Plugins/mac/PluginInfoStoreMac.mm:
        (WebKit::PluginInfoStore::shouldUsePlugin):

2012-09-17  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Remove 'using namespace WebCore' from header file

        Broke the build on Mac OS X by causing clashes between Fixed from
        /usr/include/MacTypes.h and Source/WebCore/platform/Length.h.

        Reviewed by Simon Hausmann..

        * UIProcess/PageViewportController.cpp:
        * UIProcess/PageViewportController.h:
        (PageViewportController):
        (WebKit::PageViewportController::contentsLayoutSize):
        (WebKit):
        * UIProcess/qt/PageViewportControllerClientQt.cpp:
        * UIProcess/qt/PageViewportControllerClientQt.h:
        (PageViewportControllerClientQt):

2012-09-15  Vivek Galatage  <vivekgalatage@gmail.com>

        WinCairo build fix due to missing symbols for setImagesEnabled and setStorageBlockingPolicy
        https://bugs.webkit.org/show_bug.cgi?id=96866

        Reviewed by Kentaro Hara.

        Adding missing symbol defines in the def file to fix the build break
        for WinCairo

        * win/WebKit2CFLite.def:

2012-09-15  Jinwoo Song  <jinwoo7.song@samsung.com>

        [EFL][WK2] Provide implementation for PageClientImpl::processDidCrash()
        https://bugs.webkit.org/show_bug.cgi?id=96197

        Reviewed by Gyuyoung Kim.

        WebKit2 EFL does not have an implementation for PageClientImpl::processDidCrash().
        So when WebProcess has crashed, UI process does nothing and is left alone as it is.
